# axel

./: .clang-format  .gitignore  AuthCodeManager_8h_source.html  CMakeLists.txt  Database_8h_source.html  Dockerfile  Doxyfile  DynamoDBClient_8h_source.html  HandlerManager_8h_source.html  Handler_8h_source.html  HttpSender_8h_source.html  IAuthCodeManager_8h_source.html  IDatabase_8h_source.html  IDynamoDBClient_8h_source.html  IHandler_8h_source.html  IHttpSender_8h_source.html  IOauthManager_8h_source.html  IPkceManager_8h_source.html  ISessionManager_8h_source.html  IStateHashManager_8h_source.html  ITokenRequestManager_8h_source.html  MockAuthCodeManager_8h_source.html  MockDatabase_8h_source.html  MockDynamoDBClient_8h_source.html  MockHttpSender_8h_source.html  MockOauthManager_8h_source.html  MockPkceManager_8h_source.html  MockSessionManager_8h_source.html  MockStateHashManager_8h_source.html  MockTokenRequestManager_8h_source.html  OauthManager_8cpp.html  OauthManager_8h.html  OauthManager_8h_source.html  OauthManager__test_8cpp.html  OauthManager__test_8cpp.js  PkceManager_8cpp.html  PkceManager_8h.html  PkceManager_8h_source.html  PkceManager__test_8cpp.html  PkceManager__test_8cpp.js  (+368 more)
config/: auth.h  axel.h  config.json  database.h  environment.h  poe.h  poe_auth.h  poe_auth_config.h  poe_ninja_config.h
dockerfile/: dependencies-linux-amd64.Dockerfile  dependencies-linux-arm64.Dockerfile  dependencies.Dockerfile  production.Dockerfile  staging-linux-amd64.Dockerfile  staging-linux-arm64.Dockerfile  staging.Dockerfile
docs/: backend.mermaid  detailed-net-worth.mermaid  handler-testing.mermaid  initial-oauth.mermaid  oauth-overview.mermaid  oauth.mermaid  poe-ninja-currency-overview.json  poe-ninja-currency-overview.schema.json  user-journey.mermaid
env/: release.Dockerfile
html/: dir_9f351d46ce3cc29445a41dc3a31e6919.js  files.html  files_dup.js  (+11 more)
src/auth/: CMakeLists.txt
src/auth/include/: OauthManager.h  PkceManager.h  StateHashManager.h  TokenRequestManager.h
src/auth/include/auth/: AuthCodeManager.h  OauthManager.h  PkceManager.h  SessionManager.h  StateHashManager.h  TokenRequestManager.h
src/auth/include/auth/interfaces/: IAuthCodeManager.h  IOauthManager.h  IPkceManager.h  ISessionManager.h  IStateHashManager.h  ITokenRequestManager.h
src/auth/mock/auth/: MockAuthCodeManager.h  MockOauthManager.h  MockPkceManager.h  MockSessionManager.h  MockStateHashManager.h  MockTokenRequestManager.h
src/auth/src/: AuthCodeManager.cpp  OauthManager.cpp  PkceManager.cpp  SessionManager.cpp  StateHashManager.cpp  TokenRequestManager.cpp
src/auth/test/: AuthCodeManager_test.cpp  OauthManager_test.cpp  PkceManager_test.cpp  SessionManager_test.cpp  StateHashManager_test.cpp  TokenRequestManager_test.cpp  auth_tests.cpp
src/auth/test/input/: README.md  auth-response.json  initial-login.json
src/auth/test/mock/: MockTokenRequestManager.h
src/axel/: CMakeLists.txt
src/axel/include/axel/: AuthDatabase.h  AxelDatabase.h  Config.h  Database.h  DynamoDBClient.h  Exception.h  Handler.h  HandlerManager.h  Item.h  PlayerItems.h  Prices.h  ResourceManager.h  TestHandler.h  UpdateManager.h
src/axel/include/axel/interface/: IDatabase.h  IDynamoDBClient.h  IPrices.h
src/axel/include/axel/interfaces/: IHandler.h
src/axel/mock/axel/: MockDatabase.h  MockDynamoDBClient.h
src/axel/src/: Config.cpp  Database.cpp  DynamoDBClient.cpp  Exception.cpp  Handler.cpp  HandlerManager.cpp  Item.cpp  PlayerItems.cpp  Prices.cpp  ResourceManager.cpp  TestHandler.cpp  UpdateManager.cpp
src/axel/test/: Database_test.cpp  HandlerManager_test.cpp  PlayerItems_test.cpp  Prices_test.cpp  ResourceManager_test.cpp  TestHandler_test.cpp
src/axel/test/input/: README.md  login-request.json  response.json
src/parse/: CMakeLists.txt
src/parse/include/: get_currency_prices.h
src/parse/include/parse/: JsonResult.h  json.h  util.h
src/parse/src/: get_currency_prices.cpp  util.cpp
src/parse/test/: get_currency_prices_test.cpp  util_test.cpp
src/poe_ninja/: CMakeLists.txt
src/poe_ninja/include/poe_ninja/: get_poe_ninja_data.h
src/poe_ninja/src/: get_poe_ninja_data.cpp
src/poe_ninja/test/: get_poe_ninja_data_test.cpp  poe_ninja_tests.cpp
src/util/: CMakeLists.txt  namespaces.dox
src/util/include/util/: Database.h  HttpSender.h  hash.h  http.h  path.h  type.h
src/util/include/util/interfaces/: IDatabase.h  IHttpSender.h
src/util/mock/util/: MockDatabase.h  MockHttpSender.h
src/util/parse/: CMakeLists.txt
src/util/parse/include/parse/: JsonResult.h  prices.h  string.h  util.h
src/util/parse/src/: json.cpp  prices.cpp  string.cpp  util.cpp
src/util/parse/test/: string_test.cpp
src/util/src/: Database.cpp  HttpSender.cpp  hash.cpp  http.cpp  path.cpp  type.cpp
src/util/test/: Database_test.cpp  HttpSender_test.cpp  hash_test.cpp  http_test.cpp  path_test.cpp
src/util/webutil/: CMakeLists.txt  namespaces.dox
src/util/webutil/include/webutil/: HttpSender.h  hash.h  http.h  path.h
src/util/webutil/include/webutil/interfaces/: IHttpSender.h
src/util/webutil/mock/webutil/: MockHttpSender.h
src/util/webutil/src/: HttpSender.cpp  hash.cpp  http.cpp
src/util/webutil/test/: HttpSender_test.cpp  hash_test.cpp  http_test.cpp  path_test.cpp
src/webutil/: CMakeLists.txt
src/webutil/include/webutil/: HttpSender.h  IHttpSender.h  MockHttpSender.h  OauthManager.h  PkceManager.h  TokenRequestManager.h  hash.h  http.h  https_get.h  httputil.h  path.h  pathutil.h
src/webutil/src/: OauthManager.cpp  PkceManager.cpp  StateHashManager.cpp  TokenRequestManager.cpp  hash.cpp  http.cpp  https_get.cpp  httputil.cpp  path.cpp  pathutil.cpp
src/webutil/test/: OauthManager_test.cpp  PkceManager_test.cpp  StateHashManager_test.cpp  TokenRequestManager_test.cpp  hash_test.cpp  http_test.cpp  https_get_test.cpp  httputil_test.cpp  path_test.cpp  pathutil_test.cpp  webutil_tests.cpp
src/webutil/test/mock/: MockHttpSender.h
test/: CMakeLists.txt  get-stash.json  test1.cpp
test/poe/: bad-get-stash.json  bad-list-stashes.json  get-stash.json  list-stashes.json
(+345 files in other folders)
